test/end-to-end/compile-errors/with-else.crow
main nat^(_ string[])
	with : parallel
		info log "inner"
		()
	else
		info log "else"
